--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <title>Events</title>
     <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Baloo&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Seaweed+Script&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
     <!-- Materialize Icons -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- Materialize CSS Framework -->
@@ -11,12 +13,13 @@
     <link rel="stylesheet" href="/css/style.css" />
     <!-- JavaScript for Materialize -->
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <link rel='stylesheet' href='/stylesheets/clientstyle.css' />
   </head>
   <body>
     <div class="navbar-fixed">
       <nav>
         <div class="nav-wrapper purple lighten-4">
-          <a href="/resources"><img alt="Mana" src="/images/mana.png" width="75"></a>  
+          <a href="/resources" class="logo">Mana</a>  
           <ul class="right">
             <li><a href="/resources">Home</a></li>
             <li>
@@ -29,10 +32,14 @@
           </ul>
         </div>
       </nav>
+      
     </div>
+    <img src = "/images/kids.png" alt="superhero kids">
     <header class="container">
 <body>
-  <h1>Autism Resource</h1>
-  <p>Welcome!</p>
+  <div>
+  <center><h1>Autism Resource Guide</h1></center>
+  <center><h3>Are you organizing any event or activities for kids with special needs? Login with your Google Account and add it to our list!</h3></center>
+</div>
 </body>
 </html>
