--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,7 +7,7 @@
   <link rel='stylesheet' href='/stylesheets/style.css' />
   <!-- Google Fonts -->
 	<link href="https://fonts.googleapis.com/css2?family=Seaweed+Script&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
   <title><%= name %></title>
 </head>
 <body>
@@ -16,7 +16,7 @@
     <a href="/resources" <%- name === 'Find Resources' ? 'class="active"' : '' %>>Find A Resource</a>
     <a href="/resources/new" <%- name === 'Suggest A Resource' ? 'class="active"' : '' %>>Suggest A Resource</a> 
     <a href="/clients" <%- name === 'Add Activity' ? 'class="active"' : '' %>>Add Activity</a>
-    <a href="/resources"><img alt="Mana" src="/images/mana.png" width="100"></a>  
+    <a href="/resources" class="logo">Mana</a> 
     
   </nav>
   <main>
