--- a/views/resources/info.ejs
+++ b/views/resources/info.ejs
@@ -6,7 +6,12 @@
   <p class = text></p>
   <section>
     <img src="/images/aidan.jpg" alt="Aidan" class="about"><br><br>
+    
   </section>
-  <p>Aidan came out into this world with no complications, through normal birth delivery, not a single thing at birth indicated that he would be considered "different" from other kids.  He was reaching all but one milestone according to age.  At age 1, he wasn't starting to form any words but raising him in a trilingual household, we thought that it's perfectly normal.  His dad would talk to him in French, I would talk to him in Tagalog and   </p>
+  <p class= "content"> Meet Aidan, my Disney loving, thrill seeker, almost 8 year old son.  He was diagnosed with Autism at the age of 4.  While he was growing up, we didn't really notice anything "wrong" with him.  He was meeting his milestones, he was engaging, he was one chunky happy baby.  One thing that made us wonder is why he was developing language skills slower than kids his age.  At first, we thought it was maybe because we speak 3 languages at home.  His dad's native language is French, mine is Tagalog and together we speak English.</p> 
+  <p class= "content">As hard as it was for us to admit, when he turned 3, we decided to start seeking help.  Not knowing anything about the spectrum and the services offered for kids with special needs, along with living in a small college town.  It took us a year to find resources, get an appointment and finally see a doctor.</p>
+  <p class= "content">By the time we saw the doctor, we knew Aidan is different, what the extent of it is is still a mystery to us.  I created this page to help parents navigate through this journey by providing them a place to find resources that they need.</p>
+
+  </p>
 
 <%- include('../partials/footer') %>
