--- a/public/stylesheets/clientstyle.css
+++ b/public/stylesheets/clientstyle.css
@@ -11,6 +11,23 @@ header {
     height: 100px;
 }
 
+.logo {
+    margin-left: 25px !important;
+    font-family: Seaweed Script;
+    font-size: 30px;
+    font-weight: strong;
+    color: purple;
+}
+
+h1 {
+    font-family: 'Seaweed Script';
+    font-size: 72px;
+}
+h3 {
+    font-family: 'Roboto';
+    font-size: 48px;
+}
+
 .collection-item {
     display: flex;
     justify-content: space-between;
@@ -29,4 +46,8 @@ header {
 
 .material-icons{
     color: black;
+}
+
+.button{
+    color: purple;
 }
