--- a/views/resources/show.ejs
+++ b/views/resources/show.ejs
@@ -44,5 +44,5 @@
 <% } else { %>
   <h5>No Reviews Yet</h5>
 <% } %>
-
+<a href="/resources" <%- name === 'Find Resources' ? 'class="active"' : '' %>>Check Other Resources >></a>
 <%- include('../partials/footer') %>
